name:                Challenge263
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Challenge263#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Challenge263.Easy, Challenge263.Intermediate
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                    ,  containers
                    ,  trifecta
                    ,  containers
executable Challenge263-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Challenge263.Easy, Challenge263.Intermediate
  build-depends:       base >= 4.7 && < 5
                    ,  Challenge263
                    ,  containers
                    ,  hspec
                    ,  trifecta
